--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -163,9 +163,25 @@
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,ig-platform-id</key>
-				<data>AACbPg==</data>
+				<data>BwCbPg==</data>
 				<key>device-id</key>
-				<data>mz4AAA==</data>
+				<data>mD4AAA==</data>
+				<key>framebuffer-con0-alldata</key>
+				<data>AQEJAAAIAADHAwAA</data>
+				<key>framebuffer-con0-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con1-alldata</key>
+				<data>AgYKAAAEAADHAwAA</data>
+				<key>framebuffer-con1-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-fbmem</key>
+				<data>AAAAAw==</data>
+				<key>framebuffer-patch-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-stolenmem</key>
+				<data>AACQAw==</data>
+				<key>framebuffer-unifiedmem</key>
+				<data>AAAAwA==</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
@@ -650,7 +666,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>agdpmod=pikera alcid=21</string>
+				<string>igfxonln=1 alcid=21</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
